2001-02-27  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSLock.m: Commented out extra token after #endif
	directive.
	* Headers/gnustep/base/GSXML.h: Idem.
	
2001-02-27  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.in (Version): source it as ./Version rather than
	Version (suggested by Juliusz Chroboczek <jch@pps.jussieu.fr>).
	* configure: Regenerated.

2001-02-26  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSConcreteNumber.m (NumberTemplate): added precision to float
	and double TYPE_FORMAT.

2001-02-25  Adam Fedor  <fedor@gnu.org>

	* configure.in (cppflags_temp): Corrected to save CPPFLAGS not
	CFLAGS>

2001-02-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSLocale.m: Removed YESSTR and NOSTR support for simplicity.

2001-02-24  Nicola Pero  <n.pero@mi.flashnet.it>

	* Resources/Languages/French: New file (contributed by Frederic De
	Jaeger).
	* Resources/GNUmakefile (LANGUAGES): Added French.

2001-02-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Fixed bug in handling '-a' option and enhanced
	to support multicast probing of networks specified in '-a' file.

2001-02-22  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/NSBundle.h: Added three new localization
	macros: _(), __() and NSLocalizedStaticString ().
	
2001-02-22  Nicola Pero  <n.pero@mi.flashnet.it>

	* Resources/Languages/Italian: New file.
	* Resources/GNUmakefile (LANGUAGES): Added Italian.
	
2001-02-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fixes to prevent problems obtaining
	languages array due to attempts to use partially constructed
	standard user defaults object.

2001-02-21  Adam Fedor  <fedor@gnu.org>

	* Documenation/install.texi: Update.
	* Documenation/news.texi: Likewise.
	* INSTALL, NEWS: Regen.

2001-02-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix memory leak reported by thoran@free.fr
	parsePlItem()

2001-02-17  Nicola Pero  <nicola@brainstorm.co.uk>
